--- a/index.html
+++ b/index.html
@@ -22,42 +22,42 @@
             <h1 id="heading">FAQ</h1>
             <div class="question-divs">
                 <div class="question">
-                    <h1 class="question-font">How many team members can I invite?</h1>
-                    <img src="images/icon-arrow-down.svg" alt="arrow down icon">
+                    <h1 class="question-font" id="question1">How many team members can I invite?</h1>
+                    <img src="images/icon-arrow-down.svg" alt="arrow down icon" id="arrow1">
                 </div>
-                <p class="answer-font">You can invite up to 10 team members.</p>
+                <p class="answer-font" id="answer1">You can invite up to 10 team members.</p>
             </div>
             <div class="question-divs">
                 <div class="question">
-                    <h1 class="question-font">What is the maximum file upload size?</h1>
-                    <img src="images/icon-arrow-down.svg" alt="arrow down icon">
+                    <h1 class="question-font" id="question2">What is the maximum file upload size?</h1>
+                    <img src="images/icon-arrow-down.svg" alt="arrow down icon" id="arrow2">
                 </div>
-                <p class="answer-font">No more than 2GB. All files in your account 
+                <p class="answer-font" id="answer2">No more than 2GB. All files in your account 
                 must fit your allotted storage space.</p>
             </div>
             <div class="question-divs">
                 <div class="question">
-                    <h1 class="question-font">How do I reset my password?</h1>
-                    <img src="images/icon-arrow-down.svg" alt="arrow down icon">
+                    <h1 class="question-font" id="question3">How do I reset my password?</h1>
+                    <img src="images/icon-arrow-down.svg" alt="arrow down icon" id="arrow3">
                 </div>
-                <p class="answer-font">Go to the login page and click "Forgot
+                <p class="answer-font" id="answer3">Go to the login page and click "Forgot
                 Password." Follow the instructions sent to your email to reset
                 your password.</p>
             </div>
             <div class="question-divs">
                 <div class="question">
-                    <h1 class="question-font">Can I cancel my subscription?</h1>
-                    <img src="images/icon-arrow-down.svg" alt="arrow down icon">
+                    <h1 class="question-font" id="question4">Can I cancel my subscription?</h1>
+                    <img src="images/icon-arrow-down.svg" alt="arrow down icon" id="arrow4">
                 </div>
-                <p class="answer-font">Yes, you can cancel your subscription at
+                <p class="answer-font" id="answer4">Yes, you can cancel your subscription at
                 any time through your account settings.</p>
             </div>
             <div class="question-divs">
                 <div class="question">
-                    <h1 class="question-font">Do you provide additional support?</h1>
-                    <img src="images/icon-arrow-down.svg" alt="arrow down icon">
+                    <h1 class="question-font" id="question5">Do you provide additional support?</h1>
+                    <img src="images/icon-arrow-down.svg" alt="arrow down icon" id="arrow5">
                 </div>
-                <p class="answer-font">Yes, additional support is available
+                <p class="answer-font" id="answer5">Yes, additional support is available
                 through our premium support plan.</p>
             </div>
         </div>
